# komodo-pl

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  TODO  go.mod  komodo-debug.sh  komodo-pl.csproj  komodo-pl.sln  myprogram  program.cpp  program.out  pyproject.toml  test.bat  test.py  test.sh
.github/workflows/: integrate.yml
BlazorApp/: BlazorApp.csproj
BlazorApp/Pages/: Test.razor  Test.razor.cs
BlazorApp/Properties/: launchSettings.json
BlazorApp/Shared/: NavMenu.razor
Komodo/: CLI.cs  Komodo.csproj  Main.cs  ast.rs  main.rs
Komodo.Core/: Commands.cs  Komodo.Core.csproj
Komodo.Core/Compilation/: CompilationContext.cs  Compiler.cs  Diagnostics.cs  Error.cs  JsonSerializer.cs  Lexer.cs  Parser.cs  Pass.cs  TypeChecker.cs
Komodo.Core/Interpretation/: Address.cs  Heap.cs  InstructionPointer.cs  Interpreter.cs  Memory.cs  StackFrame.cs  Sysfunc.cs  Value.cs
Komodo.Core/Utilities/: Logger.cs  NonemptyList.cs  SExpression.cs  Stream.cs  Text.cs  UTF8Char.cs  Utility.cs  VSROCollection.cs  VSRODictionary.cs
Komodo.Tests/: Komodo.Tests.csproj  Main.cs
Komodo.Tests/Compilation/: LexerTest.cs  (+1 more)
examples/: test.kmd  test.kmdir  transpile.kmd-ir
komodo/: lexer.py  main.py  utils.py
scripts/: komodo-debug.bat  komodo-debug.sh  test.bat  test.py  test.sh
src/: Main.cs  ast.rs  lexer.rs  lib.rs  main.go  main.rs  parser.rs  utils.rs
tests/: .gitignore  expr-binop.json  expr-int-literal.json  generate.py  identifier-expression.json  identifier.json  lexing.json  parenthesized-expression.json  test_lexer.py  test_utils.py  variable-declaration.json
(+320 files in other folders)
